samples/_failures_safe/1761798166_4fd091_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5002fd88.c: In function ‘main’:
./samples/SAFE/__tmp_5002fd88.c:154:12: error: missing terminating " character
  154 |     printf("1
      |            ^~
./samples/SAFE/__tmp_5002fd88.c:154:5: error: expected expression at end of input
  154 |     printf("1
      |     ^~~~~~
./samples/SAFE/__tmp_5002fd88.c:154:5: error: expected declaration or statement at end of input
